Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.8, 0.9
-
None
-
Patch Available
Description
Given
service SharedService { SharedStruct getStruct(1: i32 key) }
and
service Calculator extends shared.SharedService { // some methods }
then the inherited method getStruct() cannot be called, because the server is not able to resolve the method name into an adress. Additionally, the result value of the table lookup operation is not checked correctly.
Attachments
Attachments
Issue Links
- is required by
-
THRIFT-1555 Delphi version of the tutorial code
- Closed