THRIFT-1554 Inherited service methods are not resolved in derived service implementations Patch: Jens Geyer

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1311311 13f79535-47bb-0310-9956-ffa450edef68